am creat navbar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Laboratorul12</title>
 </head>
 <body>
+    <nav class="menu-bar">
+        <div class="group">
+          <a class="item title">Laboratorul12</a>
+        </div>
+        <div class="group">
+          <a class="item">Despre</a>
+          <a class="item">Contacte</a>
+        </div>
+      </nav>
     
 </body>
 </html>
